--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "is_js": "^0.9.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
     "react-native-flash-message": "^0.4.1",
     "react-native-indicators": "^0.17.0",
@@ -39,16 +40,21 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native-indicators": "^0.16.2",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "jest": "^29.5.0",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFiles": [
+      "./setupTests.tsx"
+    ]
   }
 }
