--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
+    "react-native-animatable": "^1.3.3",
     "react-native-flash-message": "^0.4.1",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
