--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_ETERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_ETERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.cammera" android:required="false" />
+    <uses-feature android:name="android.hardware.cammera.front" android:required="false" />
 
     <application
       android:name=".MainApplication"
