--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-native": "0.71.8",
     "react-native-animatable": "^1.3.3",
     "react-native-flash-message": "^0.4.1",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-localization": "^2.3.1",
     "react-native-modal": "^13.0.1",
+    "react-native-permissions": "^3.8.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
@@ -54,8 +56,13 @@
   },
   "jest": {
     "preset": "react-native",
-    "setupFiles": [
-      "./setupTests.tsx"
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
     ]
   }
 }
