--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,8 @@
+// prettier-ignore
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  "compilerOptions": {
+    "allowJs": true,
+    "skipLibCheck": true
+  }
 }
