--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.5",
+    "@shopify/flash-list": "^1.4.3",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.4.0",
     "is_js": "^0.9.0",
@@ -23,6 +24,7 @@
     "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
     "react-native-animatable": "^1.3.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-flash-message": "^0.4.1",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-indicators": "^0.17.0",
